sizing fix. wouldnt align home button on me iphone

--- a/stylesheets/stylie.css
+++ b/stylesheets/stylie.css
@@ -102,7 +102,7 @@ section {
         position: -webkit-sticky;
         position: absolute;
         top: 80px;
-        margin: 0 250px 0 0;
+        margin-right: 250px;
     }
     article div span h2{
         font-size: 18px;
@@ -176,7 +176,7 @@ footer{
 
 @media only screen and (max-width: 300px) {
     #home a {
-        margin: 0 200px 0 0;
+        margin-right: 200px;
     }
 }
 
